[package]
name = "hdpi_blinkenwall"
version = "0.1.0"
authors = ["Andreas Monitzer <metalab@monitzer.com>"]
edition = "2018"

[dependencies]
log = "0.4"
syn = "0.15"
env_logger = "0.6"
glium = { version = "0.24", features = ["glutin"] }
glutin = "0.20"
chrono = "0.4"
ws = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mpv = { git = "https://github.com/anlumo/mpv-rs.git" }
git2 = "0.8"
uuid = { version = "0.7", features = ["v4"] }
portaudio = "0.7"
rustfft = "3.0"
bdf = "0.5"
palette = "0.4"
rand = "0.6"
rand_xoshiro = "0.1"
unicode-normalization = "0.1"
log4rs = "0.8"
atomicring = "1.2"
