[package]
name = "hdpi_blinkenwall"
version = "0.2.0"
authors = ["Andreas Monitzer <metalab@monitzer.com>"]
edition = "2018"

[dependencies]
log = "0.4"
syn = "1.0"
env_logger = "0.8"
glium = { version = "0.29", features = ["glutin"] }
glutin = "0.26"
chrono = "0.4"
ws = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libmpv = { git = "https://github.com/anlumo/libmpv-rs" }
git2 = "0.13"
uuid = { version = "0.8", features = ["v4"] }
portaudio = "0.7"
rustfft = "6.0"
bdf = "0.6"
palette = "0.5"
rand = "0.8"
rand_xoshiro = "0.6"
unicode-normalization = "0.1"
log4rs = "1.0"
atomicring = "1.2"

