[package]
name = "hdpi_blinkenwall"
version = "0.2.0"
authors = ["Andreas Monitzer <metalab@monitzer.com>"]
edition = "2018"

[dependencies]
log = "0.4"
syn = "1.0"
env_logger = "0.9"
glium = { version = "0.30", features = ["glutin"] }
glutin = "0.27"
chrono = "0.4"
ws = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libmpv = { git = "https://github.com/anlumo/libmpv-rs" }
git2 = "0.13"
uuid = { version = "0.8", features = ["v4"] }
portaudio = "0.7"
rustfft = "6.0"
bdf = { git = "https://github.com/meh/rust-bdf.git", rev = "2eceb6634bf4932cc877a69d574c86994c0cf883" }
palette = "0.6"
rand = "0.8"
rand_xoshiro = "0.6"
unicode-normalization = "0.1"
log4rs = { version = "1.0", features = [ "file_appender" ]}
atomicring = "1.2"
gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev.git", features = [ "async-tokio" ] }
spidev = "0.4"

